updating repo with gender differences with JJH edits 6/14

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 *.snm
 *.synctex
 *.xwm
+*.tdo
 
 # Log files
 ##################################
@@ -105,4 +106,13 @@ scripts/abccare/cba/ratio_irr/flows/p1_match/*.csv
 *DS_Store
 *Rhistory
 *data_cache*
+
+# Microsoft office #
+####################
+*.doc
+*.docx
+*.ppt
+*.pptx
+*.xls
+*.xslx
 
